12/19/2004
----------
1. add date range support to advsearch


12/13/2004
----------
1. fix some typo errors in French language file
   (thanks to Dominique, dominique.fournier.AT.grenoble.cnrs.fr)


12/09/2004
----------
1. change calendar event notification email to a more concise format
   so it could be displayed well in PDA or cell phone
2. fix the error of spamassassin user prefs filename,
   it should be user_prefs, not userprefs
3. clean code related to cookies,
   rename cookienames from openwebmail-* to ow-* and include -$domain-$user
   as suffix for cookie that should not shared accross domains
4. fix a bug in openwebmail.pl that cgi param domainname was always not used
   in autologin


12/08/2004
----------
1. fix a bug in cut.pl that parameter for utime is not untainted
   (reported by Dimitrios 'sehh' Michelinakis, dimitrios.AT.michelinakis.gr)


12/07/2004
----------
1. Deutsch lang file translation update
   (thanks to Martin Bronk, martin.AT.bronk.de)
2. add new option enable_saprefs to openwebmail.conf
   This option would allow users to edit the testrules, whitelist and
   blacklist in the spamassassin userprefs file (~/.spamassassin/userprefs)


12/05/2004
----------
1. new iconset: Cool3D.Spanish
   (thanks to Jaime Caballero, master.AT.xanum.uam.mx)
2. fix a minor bug in auth_ldap.pl which always used the ou=people for
   authentication no matter what ou is set to in auth_ldap.conf
   (thanks to bjacint, bjacint.AT.kvark.hu for his fix)


12/02/2004
----------
1. fix a minor bug in adrbook.pl which may generate invalid vcard in
   addressbook conversion if an entry in old addressbook has no name defined.
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)


12/01/2004
----------
1. return false in html editor compatibility test for browser Opera
   in openwebmail-send


11/29/2004
----------
1. add -u (--unlock) option to openwebmail-tool.pl,
   it removes the file locks for specific openwebmail user by killing the