@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041219
+releasedate		20041220
 
 ##############################################################################
 # host dependent configuration
